@@ -220,6 +220,9 @@
       \code{namespace} has been removed.
 
       \item Many methods are no longer exported by package \pkg{stats}.
+      
+      \item Functions \code{readNEWS()} and \code{checkNEWS()} in
+      package \pkg{tools} are defunct.
     }
   }
 
@@ -486,6 +489,10 @@
 
       \item \code{plclust()} is deprecated: use the \code{plot()} method
       for class \code{"hclust"} instead.
+      
+      \item Functions \code{readNEWS()} and \code{checkNEWS()} in
+      package \pkg{tools} are deprecated (and they have not worked with
+      current \file{NEWS} files for a long time).
     }
   }
 
